refactor : userList.html 이름변경 - 요구사항 충족을 위해 이름및 위치 변경

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <div class="logo">
-            <a href="/">Codestagram</a>
+            <a href="/static">Codestagram</a>
         </div>
         <div class="menu">
             <a href="/login" class="btn">로그인</a>
