--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
             <a class="navbar-brand" href="#">Codestagram</a>
             <div class="d-flex">
                 <a href="/login" class="btn btn-outline-primary me-2">로그인</a>
-                <a href="/user/form" class="btn btn-primary">회원가입</a>
+                <a href="/signup" class="btn btn-primary">회원가입</a>
             </div>
         </div>
     </nav>
