--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,6 +6,7 @@
         <div class="menu">
             <a href="/login" class="btn">로그인</a>
             <a href="/register" class="btn">회원가입</a>
+            <a href="/articles/form" class="btn write-btn">글쓰기</a>
         </div>
     </nav>
 </header>
