feat : 홈화면 작성 글 목록 조회 구현 - 홈화면에서 작성된 모든 글을 확인 할 수 있다.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,14 @@
 </head>
 <body>
     <div th:replace="~{header.html}"></div>
-
+    <div class="article-container">
+        <div class="article-list">
+            <div th:each="article : ${articles}" class="article">
+                <h2 th:text="${article != null ? article.title : '게시글이 없습니다.'}"></h2>
+                <p th:text="${article != null ? article.content : ''}"></p>
+            </div>
+        </div>
+    </div>
     <div th:replace="~{footer.html}"></div>
 
 </body>
