--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -12,20 +12,38 @@
     <table border="1">
         <thead>
         <tr>
+            <th>번호</th>
             <th>아이디</th>
             <th>이름</th>
             <th>이메일</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${users}">
-            <td> <a th:href="@{/users/{userId}(userId=${user.userId})}" th:text="${user.userId}"></a></td>
-            <td th:text="${user.name}"></td>
-            <td th:text="${user.email}"></td>
+        <tr th:each="user, iterStat : ${users}">
+            <td>
+                <a th:href="@{/users/{userId}(userId=${iterStat.index + 1})}" style="display: block; width: 100%; text-decoration: none; color: inherit;">
+                    <span th:text="${iterStat.index + 1}"></span>
+                </a>
+            </td>
+            <td>
+                <a th:href="@{/users/{userId}(userId=${iterStat.index + 1})}" style="display: block; width: 100%; text-decoration: none; color: inherit;">
+                    <span th:text="${user.userId}"></span>
+                </a>
+            </td>
+            <td>
+                <a th:href="@{/users/{userId}(userId=${iterStat.index + 1})}" style="display: block; width: 100%; text-decoration: none; color: inherit;">
+                    <span th:text="${user.name}"></span>
+                </a>
+            </td>
+            <td>
+                <a th:href="@{/users/{userId}(userId=${iterStat.index + 1})}" style="display: block; width: 100%; text-decoration: none; color: inherit;">
+                    <span th:text="${user.email}"></span>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
-    <a href="/register">회원가입 페이지로</a>
+    <a href="/register" class="register-link">회원가입 페이지로</a>
 </main>
 <div th:replace="~{footer.html}"></div>
 </body>
