Feat: list.html에 mustache 추가 userList에 있는 목록들을 나타내게했고, 없으면 등록된 사용자가 없다고 나타냄. 그리고 a태그로 users로 이동하게 함.

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -83,12 +83,22 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                    <th scope="row">1</th> <td>javajigi</td> <td>자바지기</td> <td>javajigi@sample.net</td><td><a href="#" class="btn btn-success" role="button">수정</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th> <td>slipp</td> <td>슬립</td> <td>slipp@sample.net</td><td><a href="#" class="btn btn-success" role="button">수정</a></td>
-                </tr>
+                  {{#userList}}
+                  <tr>
+                      <!-- index가 필요한 경우, 컨트롤러에서 미리 계산해 전달하거나, 각 User 객체에 index 필드를 추가해야 합니다. -->
+                      <th scope="row">1</th>
+                      <td><a href="/users/{{userId}}">{{userId}}</a></td>
+                      <td>{{name}}</td>
+                      <td>{{email}}</td>
+                      <td><a href="#" class="btn btn-success" role="button">수정</a></td>
+                  </tr>
+                  {{/userList}}
+
+                  {{^userList}}
+                  <tr>
+                      <td colspan="5" class="text-center">등록된 사용자가 없습니다.</td>
+                  </tr>
+                  {{/userList}}
               </tbody>
           </table>
         </div>
