--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -1,7 +1,7 @@
 <!-- 네비게이션 바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container">
-        <a class="navbar-brand" href="#">Codestagram</a>
+        <a class="navbar-brand" href="/">Codestagram</a>
         <div class="d-flex">
             <a href="/login" class="btn btn-outline-primary me-2">로그인</a>
             <a href="/signup" class="btn btn-primary">회원가입</a>
