--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -88,6 +88,12 @@
                         <div class="col-8" th:text="${user.email}">사용자 이메일</div>
                     </div>
                 </div>
+
+                <div class="d-grid gap-2">
+                    <a th:href="@{/users/{id}/form(id=${user.id})}" class="btn btn-primary">
+                        <i class="bi bi-pencil-square"></i> 정보 수정
+                    </a>
+                </div>
             </div>
         </div>
 
