--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -84,8 +84,10 @@
             </tr>
             <tr th:each="user, stat : ${users}">
                 <td th:text="${stat.count}"></td>
-                <td th:text="${user.getName()}"></td>
-                <td th:text="${user.getUserId()}"></td>
+                <td th:text="${user.name}"></td>
+                <td>
+                    <a th:href="@{/users/{id}(id=${user.userId})}" th:text="${user.userId}"></a>
+                </td>
             </tr>
           </table>
         </div>
