--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -23,9 +23,15 @@
                         
                         <form th:action="@{/users/{id}(id=${user.id})}" method="post" th:object="${user}">
                             <input type="hidden" name="_method" value="PUT" />
+                            
+                            <div class="mb-3">
+                                <label for="id" class="form-label">아이디</label>
+                                <input type="text" class="form-control" id="id" th:value="*{id}" readonly>
+                            </div>
+
                             <div class="mb-3">
                                 <label for="email" class="form-label">이메일</label>
-                                <input type="email" class="form-control" id="email" th:field="*{email}" readonly>
+                                <input type="email" class="form-control" id="email" th:field="*{email}" required>
                             </div>
                             
                             <div class="mb-3">
