Feat: 프로필에서 이름도 확인할 수 있도록 함

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -18,6 +18,7 @@
                         <div class="media-body">
                             <h4 class="media-heading">{{user.userId}}</h4>
                             <p>
+                                <span>{{user.name}}</span>
                                 <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-envelope"></span>{{user.email}}</a>
                             </p>
                         </div>
