Feat: 회원 프로필 조회 기능 구현
회원 프로필 조회 API 개발

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -85,7 +85,9 @@
               <tbody>
                 <tr th:each="user, stat : ${users}">
                     <th scope="row" th:text="${stat.count}">1</th>
-                    <td th:text="${user.userId}"></td>
+                    <td>
+                        <a th:href="@{/users/{userid}(userid=${user.userId})}" th:text="${user.userId}"></a>
+                    </td>
                     <td th:text="${user.name}"></td>
                     <td th:text="${user.email}"></td>
                     <td>
