--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -16,7 +16,7 @@
     <div class="col-md-12">
         <div class="navbar-header">
 
-            <a href="../index.html" class="navbar-brand">SLiPP</a>
+            <a href="../../static/index.html" class="navbar-brand">SLiPP</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
                 <i class="glyphicon glyphicon-search"></i>
             </button>
@@ -63,9 +63,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="../index.html">Posts</a></li>>
-                <li><a href="../user/login.html" role="button">로그인</a></li>
-                <li><a href="form.html" role="button">회원가입</a></li>
+                <li class="active"><a href="../../static/index.html">Posts</a></li>>
+                <li><a href="../../static/user/login.html" role="button">로그인</a></li>
+                <li><a href="../../static/user/form.html" role="button">회원가입</a></li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
@@ -81,12 +81,15 @@
                 <div class="well well-sm">
                     <div class="media">
                         <a class="thumbnail pull-left" href="#">
-                            <img class="media-object" src="../images/80-text.png">
+                            <img class="media-object" src="../../static/images/80-text.png">
                         </a>
                         <div class="media-body">
-                            <h4 class="media-heading">자바지기</h4>
+                            <h4 class="media-heading" th:text="${user.userId}">자바지기</h4>
                             <p>
-                                <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-envelope"></span>&nbsp;javajigi@slipp.net</a>
+                                <a href="#" class="btn btn-xs btn-default">
+                                    <span class="glyphicon glyphicon-envelope"></span>&nbsp;
+                                    <span th:text="${user.email}">javajigi@slipp.net</span>
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -95,6 +98,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- script references -->
 <script src="../js/jquery-2.2.0.min.js"></script>
