--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,18 +6,22 @@
 <body>
 <h2>회원 목록</h2>
 <table border="1">
+    <thead>
     <tr>
         <th>ID</th>
         <th>이름</th>
         <th>이메일</th>
         <th>프로필</th>
     </tr>
+    </thead>
+    <tbody>
     <tr th:each="user : ${users}">
         <td th:text="${user.id}"></td>
         <td th:text="${user.name}"></td>
         <td th:text="${user.email}"></td>
-        <td><a th:href="@{/users/{id}(id=${user.id})}">보기</a></td>
+        <td><a th:href="@{/users/{userId}(userId=${user.id})}">보기</a></td>
     </tr>
+    </tbody>
 </table>
 <a href="/users/form">회원 가입</a>
 </body>
