:recycle: 회원 정보 수정 링크 생성

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -62,7 +62,9 @@
                     <td><a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.id}"></a></td>
                     <td th:text="${user.name}"></td>
                     <td th:text="${user.email}"></td>
-                    <td><a href="#" class="btn btn-success" role="button">수정</a></td>
+                    <td>
+                        <a th:href="@{/users/{id}/revise(id=${user.id})}" class="btn btn-success" role="button">수정</a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
