--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -25,7 +25,7 @@
     </div>
 </nav>
 
-<div th:replace="fragments/navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
