--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
   <div class="navbar navbar-default" id="subnav">
     <div class="col-md-12">
       <div class="navbar-header">
-        <a href="#" style="margin-left:15px;" class="navbar-btn btn btn-default btn-plus dropdown-toggle"
+        <a href="/" style="margin-left:15px;" class="navbar-btn btn btn-default btn-plus dropdown-toggle"
            data-toggle="dropdown">
           <i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home
           <small><i class="glyphicon glyphicon-chevron-down"></i></small>
