:recycle: 다이렉트 링크 수정
posts 클릭시 게시판화면이 띄워지게 링크 수정

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -22,7 +22,7 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse2">
         <ul class="nav navbar-nav navbar-right">
-          <li><a th:href="@{/questions}" role="button">Posts</a></li>
+          <li><a href="/" role="button">Posts</a></li>
           <li><a th:href="@{/users/login}" role="button">로그인</a></li>
           <li><a th:href="@{/users/create}" role="button">회원가입</a></li>
           <li><a href="/users/logout" role="button">로그아웃</a></li>
