feat : 회원 정보 수정 db 연결 - verifyPassword Get으로 수정

--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -21,7 +21,7 @@
     <h1>회원 정보 수정</h1>
 
     <!-- 비밀번호 검증 폼 -->
-    <form action="/users/verify_password" method="POST" style="display: block;">
+    <form action="/users/verify_password" method="GET" style="display: block;">
         <div>
             <label for="password">현재 비밀번호</label>
             <input type="password" id="password" name="password" required placeholder="현재 비밀번호">
