fix : 회원가입시 아이디 중복 체크 - 아이디가 중복인 경우 에러 메세지를 출력한다.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -741,4 +741,8 @@ table caption {
     color: #4285f4;
     margin-bottom: 10px;
 }
-
+.error-message {
+    color: red; /* 빨간색으로 메시지 색상 변경 */
+    font-weight: bold; /* 굵은 글씨 */
+    margin-bottom: 15px; /* 메시지와 폼 사이에 여백 추가 */
+}
