--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,28 +10,34 @@
 
 <main>
     <h1>회원가입 페이지</h1>
+
+    <!-- 에러 메시지 출력 -->
+    <div th:if="${errorMessage}" class="error-message">
+        <p th:text="${errorMessage}"></p>
+    </div>
+
     <form action="/users" method="post">
         <div class="form-group">
             <label for="userId">아이디:</label>
-            <input type="text" name="userId" id="userId">
+            <input type="text" name="userId" id="userId" required>
         </div>
         <div class="form-group">
             <label for="password">비밀번호:</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" required>
         </div>
         <div class="form-group">
             <label for="name">이름:</label>
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" required>
         </div>
         <div class="form-group">
             <label for="email">이메일:</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required>
         </div>
         <button type="submit">회원가입</button>
     </form>
     <a href="/">홈으로</a>
 </main>
 
-    <div th:replace="~{footer.html}"></div>
+<div th:replace="~{footer.html}"></div>
 </body>
 </html>
