fix(form.html): 수정된 제목으로 게시글 작성하기 텍스트 수정

--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -9,7 +9,7 @@
     <div th:replace="~{nav.html}"></div>
     
     <div class="container mt-5">
-        <h2 class="mb-4">게시글 작성하기초</h2>
+        <h2 class="mb-4">게시글 작성하기</h2>
         
         <form th:action="@{/articles}" method="post">
             <div class="mb-3">
