refactor: 로그인 기능이 아직 없음 -> loggedInUser 체크(th:if) 추가

--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -1,4 +1,10 @@
 <!-- script references -->
-<script th:src="@{/js/jquery-2.2.0.min.js}"></script>
-<script th:src="@{/js/bootstrap.min.js}"></script>
-<script th:src="@{/js/scripts.js}"></script>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted text-center">&copy; 2025 SLiPP. All Rights Reserved.</p>
+    </div>
+    <!-- script references -->
+    <script th:src="@{/js/jquery-2.2.0.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/scripts.js}"></script>
+</footer>
