--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top header">
-    <div class="col-md-12">
+    <div class="container">
         <div class="navbar-header">
             <a th:href="@{/}" class="navbar-brand">SLiPP</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
@@ -7,7 +7,7 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse1">
-            <form class="navbar-form pull-left">
+            <form class="navbar-form navbar-left">
                 <div class="input-group" style="max-width:470px;">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                     <div class="input-group-btn">
@@ -23,7 +23,8 @@
                         <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                     </ul>
                 </li>
-                <li><a th:href="@{/users/list}"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li th:if="${loggedInUser != null}"><a th:href="@{/users/list}"><i class="glyphicon glyphicon-user"></i></a></li>
+                <li th:if="${loggedInUser == null}"><a th:href="@{/users/login}"><i class="glyphicon glyphicon-log-in"></i> 로그인</a></li>
             </ul>
         </div>
     </div>
