--- a/src/main/resources/templates/layout/subnav.html
+++ b/src/main/resources/templates/layout/subnav.html
@@ -1,11 +1,20 @@
 <div class="navbar navbar-default" id="subnav">
-    <div class="col-md-12">
+    <div class="container">
         <div class="navbar-header">
             <a href="#" class="navbar-btn btn btn-default btn-plus dropdown-toggle" data-toggle="dropdown">
                 <i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home <small><i class="glyphicon glyphicon-chevron-down"></i></small>
             </a>
             <ul class="nav dropdown-menu">
-                <li><a href="profile.html"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
+                <li th:if="${loggedInUser != null}">
+                    <a th:href="@{/users/{id}(id=${loggedInUser.id})}">
+                        <i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> 내 프로필
+                    </a>
+                </li>
+                <li th:if="${loggedInUser == null}">
+                    <a th:href="@{/users/login}">
+                        <i class="glyphicon glyphicon-log-in"></i> 로그인
+                    </a>
+                </li>
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
