refactor: thymeleaf 최신 문법으로 수정
- 기존 thymeleaf fragment 사용 시 더 이상 사용하지 않는 문법을 사용하고 있었습니다.
- 최신 문법으로 수정했습니다.

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -11,7 +11,7 @@
     <![endif]-->
 </head>
 <body>
-<header th:replace="fragments/header :: header"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 
 <main layout:fragment="content"></main>
 
