Refactor: Thymeleaf fragments 도입으로 HTML 중복 코드 제거
- 공통 헤더, 네비게이션 바, 푸터를 fragments.html로 분리
- 모든 페이지에 fragments를 적용하여 일관된 UI 유지

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,12 @@
                 <i class="glyphicon glyphicon-search"></i>
             </button>
         </div>
+
+        <!-- 강아지 이미지 추가 - 네비게이션 바 중앙에 배치 -->
+        <div class="text-center" style="position: absolute; left: 50%; transform: translateX(-50%); top: 0;">
+            <img src="/images/angry_cloud.jpeg" alt="Cute Dog" style="height: 50px; width: auto; margin-top: 0; border-radius: 0;">
+        </div>
+
         <div class="collapse navbar-collapse" id="navbar-collapse1">
             <form class="navbar-form pull-left">
                 <div class="input-group" style="max-width:470px;">
@@ -68,7 +74,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Posts</a></li>
                 <li><a href="/user/login" role="button">로그인</a></li>
-                <li><a href="/users/signUp" role="button">회원가입</a></li>
+                <li><a href="/users/join" role="button">회원가입</a></li>
                 <li><a href="#" role="button">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
             </ul>
