--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -31,10 +31,7 @@
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
             <!-- 로그인 실패 시 오류 메시지 -->
-            <div class="alert alert-danger" role="alert" th:if="${param.error}">
-                아이디 또는 비밀번호가 틀립니다. 다시 로그인 해주세요.
-            </div>
-
+            <div class="alert alert-danger" role="alert" th:if="${loginError}" th:text="${loginError}"></div>
             <form name="loginForm" method="post" action="/users/login">
                 <div class="form-group">
                     <label for="id">사용자 아이디</label>
