refactor(User): User 엔티티에 auto_increment id 컬럼 추가

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -25,8 +25,8 @@
                             <input type="hidden" name="_method" value="PUT" />
                             
                             <div class="mb-3">
-                                <label for="id" class="form-label">아이디</label>
-                                <input type="text" class="form-control" id="id" th:value="*{id}" readonly>
+                                <label for="userId" class="form-label">아이디</label>
+                                <input type="text" class="form-control" id="userId" th:value="*{userId}" readonly>
                             </div>
 
                             <div class="mb-3">
