--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -71,13 +71,13 @@
                         <i class="bi bi-person"></i>
                     </div>
                     <h2 class="h4" th:text="${user.name}">사용자 이름</h2>
-                    <p class="text-muted" th:text="${user.id}">사용자 아이디</p>
+                    <p class="text-muted" th:text="${user.userId}">사용자 아이디</p>
                 </div>
 
                 <div class="profile-info">
                     <div class="row mb-3">
                         <div class="col-4 info-label">아이디</div>
-                        <div class="col-8" th:text="${user.id}">사용자 아이디</div>
+                        <div class="col-8" th:text="${user.userId}">사용자 아이디</div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-4 info-label">이름</div>
