--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -44,8 +44,8 @@
             <div class="card-body">
                 <form th:action="@{/users}" method="post">
                     <div class="mb-3">
-                        <label for="id" class="form-label">아이디</label>
-                        <input type="text" class="form-control" id="id" name="id" required>
+                        <label for="userId" class="form-label">아이디</label>
+                        <input type="text" class="form-control" id="userId" name="userId" required>
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">이름</label>
