refactor : 의미없는 변수 제거 및 이름 변경

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${users}">
+        <tr th:each="user : ${user}">
             <td>
                 <a th:href="@{/users/{id}(id=${user.id})}" style="display: block; width: 100%; text-decoration: none; color: inherit;">
                     <span th:text="${user.id}"></span>
