--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -18,13 +18,13 @@
 
     <!-- 사용자 정보 -->
     <div class="profile-info">
-        <p><strong>번호:</strong> <span th:text="${id}"></span></p>
+        <p><strong>번호:</strong> <span th:text="${user.id}"></span></p>
         <p><strong>아이디:</strong> <span th:text="${user.userId}"></span></p>
         <p><strong>이름:</strong> <span th:text="${user.name}"></span></p>
         <p><strong>이메일:</strong> <span th:text="${user.email}"></span></p>
     </div>
     <div class="btn-group">
-        <a th:href="@{/users/{id}/update(id = ${id})}" class="btn-edit">회원 정보 수정</a>
+        <a th:href="@{/users/{id}/update(id = ${user.id})}" class="btn-edit">회원 정보 수정</a>
         <a th:href="@{/users}" class="btn-return">목록으로 돌아가기</a>
     </div>
 </main>
