feat: 글 상세페이지 이동 링크 추가
글 제목 클릭 시 글 상세페이지로 이동하도록 구현했습니다.

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,7 +18,9 @@
           </tr>
           <tr th:each="article, stat : ${articles}">
             <td th:text="${stat.count}"></td>
-            <td th:text="${article.title}"></td>
+            <td>
+              <a th:text="${article.title}" th:href="@{/article/{index}(index=${article.id})}"></a>
+            </td>
             <td th:text="${article.content}"></td>
           </tr>
         </table>
