--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -16,24 +16,24 @@
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="container" id="main">
-   <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
-      <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/questions">
-              <div class="form-group">
-                  <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName}" readonly/>
-              </div>
-              <div class="form-group">
-                  <label for="title">제목</label>
-                  <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
-              </div>
-              <div class="form-group">
-                  <label for="content">내용</label>
-                  <textarea name="content" id="content" rows="5" class="form-control"></textarea>
-              </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
-              <div class="clearfix" />
-          </form>
+    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+        <div class="panel panel-default content-main">
+            <form name="question" method="post" action="/questions">
+                <div class="form-group">
+                    <label for="writer">글쓴이</label>
+                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName.name}" readonly/>
+                </div>
+                <div class="form-group">
+                    <label for="title">제목</label>
+                    <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
+                </div>
+                <div class="form-group">
+                    <label for="content">내용</label>
+                    <textarea name="content" id="content" rows="5" class="form-control"></textarea>
+                </div>
+                <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+                <div class="clearfix" />
+            </form>
         </div>
     </div>
 </div>
@@ -42,5 +42,5 @@
 <script src="../../static/js/jquery-2.2.0.min.js"></script>
 <script src="../../static/js/bootstrap.min.js"></script>
 <script src="../../static/js/scripts.js"></script>
-	</body>
+</body>
 </html>
