--- a/src/main/resources/templates/user/change.html
+++ b/src/main/resources/templates/user/change.html
@@ -18,7 +18,7 @@
 <div class="container" id="main">
   <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default content-main">
-      <form name="changeInfo" method="post" th:action="@{/users/{id}/revise(id=${user.id})}">
+      <form name="changeInfo" method="post">
         <input type="hidden" name="_method" value="put">
         <div class="form-group">
         </div>
