refactor: 수정, 회원 프로필 이동 URL 변경
- 기존 특정 회원을 식별할 때 userId값을 통해 식별했으나, id값으로 식별자가 바뀌면서 URL 또한 바꿔줬습니다.

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,9 +18,12 @@
                 </tr>
                 <tr th:each="user, stat : ${users}">
                     <td th:text="${stat.count}"></td>
-                    <td th:text="${user.name}"></td>
                     <td>
-                        <a th:href="@{/users/{id}(id=${user.userId})}" th:text="${user.userId}"></a>
+                        <a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.name}"></a>
+                    </td>
+                    <td th:text="${user.userId}"></td>
+                    <td>
+                        <a class="btn btn-success" th:href="@{/users/{id}/form(id=${user.id})}">수정</a>
                     </td>
                 </tr>
               </table>
