refactor: 회원 수정 HTTP 요청 변경
- POST 요청에서 PUT 메소드 요청으로 변경했습니다.

--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -16,6 +16,7 @@
 
                     <div class="card-body p-4">
                         <form method="post" th:action="@{/users/{id}/update(id=${user.id})}">
+                            <input type="hidden" name="_method" value="PUT"/>
 
                             <div class="mb-4">
                                 <label for="confirmPassword" class="form-label fw-bold">비밀번호 확인</label>
