--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -4,14 +4,14 @@
         <a class="navbar-brand" href="/">Codestagram</a>
         <div class="d-flex">
             <!-- 로그인하지 않은 경우 -->
-            <div th:if="${session.user == null}">
+            <div th:if="${session.sessionedUser == null}">
                 <a href="/auth/login" class="btn btn-outline-primary me-2">로그인</a>
                 <a href="/signup" class="btn btn-primary">회원가입</a>
             </div>
             <!-- 로그인한 경우 -->
-            <div th:if="${session.user != null}">
-                <span class="me-2">안녕하세요, <span th:text="${session.user.name}"></span>님!</span>
-                <a th:href="@{/users/{id}/form(id=${session.user.id})}" class="btn btn-outline-secondary me-2">개인정보 수정</a>
+            <div th:if="${session.sessionedUser != null}">
+                <span class="me-2">안녕하세요, <span th:text="${session.sessionedUser.name}"></span>님!</span>
+                <a th:href="@{/users/{id}/form(id=${session.sessionedUser.id})}" class="btn btn-outline-secondary me-2">개인정보 수정</a>
                 <form th:action="@{/auth/logout}" method="post" style="display: inline;">
                     <button type="submit" class="btn btn-danger">로그아웃</button>
                 </form>
