--- a/src/main/resources/templates/articles/show.html
+++ b/src/main/resources/templates/articles/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시글 상세</title>
@@ -10,8 +10,26 @@
 
 <div class="article-container">
     <div class="article-detail">
-        <h2 th:text="${article.title}"></h2>
-        <p th:text="${article.content}"></p>
+        <div class="article-header">
+            <h2 th:text="${article.title}"></h2>
+            <div class="article-info">
+                <span class="author">작성자: <span th:text="${article.user.userId}"></span></span>
+                <span class="date">작성일: <span th:text="${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')}"></span></span>
+            </div>
+        </div>
+        <div class="article-content">
+            <p th:text="${article.content}"></p>
+        </div>
+        
+        <!-- 작성자만 수정/삭제 버튼 표시 -->
+        <div th:if="${author}" class="article-actions">
+            <a th:href="@{/articles/{id}/edit(id=${article.id})}" class="btn btn-primary">수정</a>
+            <form th:action="@{/articles/{id}(id=${article.id})}" method="post" style="display: inline;">
+                <input type="hidden" name="_method" value="delete">
+                <button type="submit" class="btn btn-danger">삭제</button>
+            </form>
+        </div>
+        
         <a href="/">← 목록으로 돌아가기</a>
     </div>
 </div>
